--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.12.0",
     "clsx": "^2.1.1",
     "eslint-plugin-storybook": "^0.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
