--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
